2014-06-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mm-display-part):
	* mm-decode.el (mm-shr):
	* mm-view.el (mm-inline-text-html-render-with-w3m, mm-inline-text)
	(mm-insert-inline): Set insertion type of end-marker, not only
	start-marker, of undisplayer so as to stay after inserted text.

2014-06-02  Andreas Schwab  <schwab@linux-m68k.org>

	* html2text.el (html2text-get-attr): Fix typo when splitting value from
	attribute. (Bug#17613)

2014-05-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-view.el (mm-display-inline-fontify): Use font-lock-ensure.
	* gnus-cite.el (gnus-message-citation-mode): Use font-lock-flush.

2014-05-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-inline-part, gnus-mm-display-part): Don't
	delete next part button; keep spacing between buttons.

2014-05-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-inline-part, gnus-mm-display-part):
	Work for the last MIME part in an article.
	(gnus-mime-display-single): Suppress excessive newlines between parts.

	* mm-uu.el (mm-uu-dissect): Assume that separators may be accompanied
	by leading or trailing newline.

2014-05-12  Sam Steingold  <sds@gnu.org>

	* time-date.el (seconds-to-string): New function to pretty print time
	delay in seconds.

2014-05-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mm-display-part): Don't put article out of sight
	while prompting a user for a file name, etc.
	(gnus-mime-display-single): Display part with a common appearance no
	matter whether MIME button is omitted or not; don't add duplicate entry
	to gnus-article-mime-handle-alist.
	(gnus-mime-buttonize-attachments-in-header): Use copied buttons.

2014-05-08  Adam Sjøgren  <asjo@koldfront.dk>

	* mml2015.el (mml2015-display-key-image): New variable.

2014-05-08  Glenn Morris  <rgm@gnu.org>

	* gnus-fun.el (gnus-grab-cam-face):
	Do not use predictable temp-file name.  (http://bugs.debian.org/747100)
	This is CVE-2014-3421.
